--- a/CPRentManagement.API/CPRentManagement.API.csproj
+++ b/CPRentManagement.API/CPRentManagement.API.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
@@ -13,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CPRentManagement.Domain\CPRentManagement.Domain.csproj" />
     <ProjectReference Include="..\CPRentManagement.Repository\CPRentManagement.Repository.csproj" />
   </ItemGroup>
 
