Add login route to account controller

--- a/CPRentManagement.API/appsettings.Development.json
+++ b/CPRentManagement.API/appsettings.Development.json
@@ -8,5 +8,11 @@
   },
   "ConnectionStrings": {
     "ApplicationConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CPRMData;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "JwtSettings": {
+    "SecurityKey": "mysupersecrettokenkey",
+    "ValidIssuer": "https://localhost:5001",
+    "ValidAudience": "https://localhost:5001",
+    "ExpiresInDays": 7
   }
 }
